<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >


    <LinearLayout
        android:id="@+id/dialogLinearLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"

        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        >




        <TextView
            android:id="@+id/diaTextName"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:textStyle="bold"
            android:textColor="@color/black"

            android:paddingTop="16sp"

            />


        <ImageView
            android:id="@+id/diaCardImage"

            android:layout_width="270sp"
            android:layout_height="404sp"

            android:layout_gravity="center"

            android:clickable="true"
            android:focusable="true"
            />



        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/numberTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"

                    android:text="@string/cardSpace"
                    />

                <TextView
                    android:id="@+id/numberData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/hpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"

                    android:text="@string/hp"
                    />

                <TextView
                    android:id="@+id/hpData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/seriesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"

                    android:text="@string/series"
                    />

                <TextView
                    android:id="@+id/seriesData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/setTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"

                    android:text="@string/set"
                    />

                <TextView
                    android:id="@+id/setData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>

            <TextView
                android:id="@+id/diaFlavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textStyle="italic"

                android:lines="3"
                android:paddingTop="8sp"
                />


        </LinearLayout>

        <Space
            android:id="@+id/diaCardSpacer"

            android:layout_width="match_parent"
            android:layout_height="16sp"
            />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:text="OK"
                android:id="@+id/okBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>